<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.LoginFragment" android:background="@color/bgColor">
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/your_email"
            android:ems="10"
            android:id="@+id/login_email" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" android:layout_marginLeft="32dp" android:layout_marginRight="32dp"
            android:background="@drawable/background_edittext_rounded" android:paddingStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/login_email" app:layout_constraintEnd_toEndOf="@id/login_email"
            app:layout_constraintStart_toStartOf="@id/login_email" android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext_rounded" android:paddingStart="8dp"/>
    <Button
            android:text="@string/enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_button_enter"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintEnd_toEndOf="@+id/login_password" android:layout_marginTop="32dp"
            android:textColor="@android:color/white" android:background="@drawable/background_button_rounded"/>
    <TextView
            android:text="@string/ask_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_create_accounts"
            app:layout_constraintTop_toBottomOf="@+id/login_button_enter" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textColor="@android:color/holo_green_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginTop="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>