<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:background="@color/bgColor"
                                                   tools:context=".controller.RegisterFragment">

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/register_img_photo"
            app:civ_border_color="@android:color/holo_green_dark"
            app:civ_border_width="2dp"
            app:layout_constraintTop_toTopOf="@+id/register_btn_photo"
            app:layout_constraintBottom_toBottomOf="@+id/register_btn_photo"
            app:layout_constraintEnd_toEndOf="@+id/register_btn_photo"
            app:layout_constraintStart_toStartOf="@+id/register_btn_photo"/>
    <Button
            android:text="@string/your_photo"
            android:layout_width="150dp"
            android:layout_height="150dp" android:id="@+id/register_btn_photo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/background_button_photo_rounded"/>
    <EditText
            android:id="@+id/register_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edittext_rounded"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textCapSentences"
            android:paddingStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_btn_photo" android:layout_marginTop="32dp"/>

    <EditText
            android:id="@+id/register_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/background_edittext_rounded"
            android:ems="10"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/register_name"
            app:layout_constraintStart_toStartOf="@+id/register_name"
            app:layout_constraintTop_toBottomOf="@+id/register_name" android:layout_marginTop="8dp"/>

    <EditText
            android:id="@+id/register_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:background="@drawable/background_edittext_rounded"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/register_email"
            app:layout_constraintStart_toStartOf="@+id/register_email"
            app:layout_constraintTop_toBottomOf="@+id/register_email" />
    <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_button_rounded"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/register_password"
            app:layout_constraintStart_toStartOf="@+id/register_password"
            app:layout_constraintTop_toBottomOf="@+id/register_password"/>
</androidx.constraintlayout.widget.ConstraintLayout>